implement layout changes for publication series page

--- a/source/publication-series.html.erb
+++ b/source/publication-series.html.erb
@@ -1,21 +1,28 @@
 <section class="publications">
-  <h1>POS+ Publication Series</h1>
-  <div class="series">
-    <div class="working-papers">
-      <h2>Working Papers</h2>
-      <ul>
-        <li><a href="#">working paper 1</a><i class="fa fa-file"></i></li>
-        <li><a href="#">working paper 2</a><i class="fa fa-file"></i></li>
-        <li><a href="#">working paper 3</a><i class="fa fa-file"></i></li>
-      </ul>
+    <div class="documents">
+      <h1>POS+ Publication Series</h1>
+      <section class="series">
+        <h2>Working Papers</h2>
+        <ul>
+          <li><a href="#">working paper 1</a><i class="fa fa-file right"></i></li>
+          <li><a href="#">working paper 2</a><i class="fa fa-file right"></i></li>
+          <li><a href="#">working paper 3</a><i class="fa fa-file right"></i></li>
+        </ul>
+      </section>
+      <section class="series">
+        <h2>Technical Reports</h2>
+        <ul>
+          <li><a href="#">technical report 1</a><i class="fa fa-file right"></i></li>
+          <li><a href="#">technical report 2</a><i class="fa fa-file right"></i></li>
+          <li><a href="#">technical report 3</a><i class="fa fa-file right"></i></li>
+        </ul>
+      </section>
     </div>
-    <div class="technical-reports">
-      <h2>Technical Reports</h2>
+    <aside>
+      <h2>Archive</h2>
       <ul>
-        <li><a href="#">technical report 1</a><i class="fa fa-file"></i></li>
-        <li><a href="#">technical report 2</a><i class="fa fa-file"></i></li>
-        <li><a href="#">technical report 3</a><i class="fa fa-file"></i></li>
+        <li><i class="fa fa-folder left"></i><a href="#">2013</a></li>
+        <li><i class="fa fa-folder left"></i><a href="#">2012</a></li>
       </ul>
-    </div>
-  </div>
+    </aside>
 </section>
