--- a/source/stylesheets/partials/_publicationseries.scss
+++ b/source/stylesheets/partials/_publicationseries.scss
@@ -9,11 +9,22 @@ section.publications {
       margin-bottom: em(10);
     }
   }
-  div.working-papers, div.technical-reports {
+  i {
+    color: #40526b;
+    font-size: $base-font-size * 1.2;
+    &.right {
+      margin-left: em(10);
+    }
+    &.left {
+      margin-right: em(10);
+    }
+  }
+  div.documents {
     padding: .75em;
     margin-top: em(20);
     @include media($medium-screen) {
-      @include span-columns(6);
+      float: left;
+      @include span-columns(9);
       @include omega(2n);
       margin-top: 0;
       padding: 3em;
@@ -25,7 +36,6 @@ section.publications {
       font-size: $base-font-size * 1.2;
       text-align: center;
       @include media($medium-screen) {
-        font-size: $base-font-size * 2;
         text-align: left;
       }
     }
@@ -42,11 +52,16 @@ section.publications {
     a {
       text-decoration: underline;
     }
+  }
 
-    i {
-      color: #40526b;
-      font-size: $base-font-size * 1.2;
-      margin-left: em(10);
+  aside {
+    @include media($medium-screen) {
+      @include span-columns(3);
+      float: right;
+    }
+
+    ul {
+      margin-top: em(20);
     }
   }
 }
