implement tabbed panels for current and past research projects

--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -22,6 +22,7 @@ $light-green: #E6EFC2;
 
 // Background Color
 $base-background-color: #ebebeb;
+$base-body-color: #ebebeb;
 
 // Font Colors
 $base-font-color: $dark-gray;
